# DirectoryWatcher

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
app/: App.cpp  App.h  App.hpp  CMakeLists.txt  CommandLineOptions.h  main.cpp
app/fs/: Database.cpp  Database.h  Database.hpp  Watcher.cpp  Watcher.h
cmake/: Build-SQLite3.cmake
utest/: CMakeLists.txt
